--- a/src/app/00078-GestionPlanillas/Data/Data.csproj
+++ b/src/app/00078-GestionPlanillas/Data/Data.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Tables\TC_Vinculo.cs" />
     <Compile Include="Tables\TR_Periodo.cs" />
     <Compile Include="Views\VW_Conceptos.cs" />
+    <Compile Include="Views\VW_ConceptosAsignados_Plantilla.cs" />
     <Compile Include="Views\VW_PlantillasPlanilla.cs" />
     <Compile Include="Views\VW_ResumenPlanillaTrabajador.cs" />
     <Compile Include="Views\VW_Administrativo.cs" />
