Avance formulario de asignación de conceptos.

--- a/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
+++ b/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
@@ -452,6 +452,7 @@
     <Content Include="Views\PlantillaPlanilla\_MsgRegistrarPlantillaPlanilla.cshtml" />
     <Content Include="Views\PlantillaPlanilla\_ConceptosAsignados.cshtml" />
     <Content Include="Views\PlantillaPlanilla\_MantenimientoAsignacionConcepto.cshtml" />
+    <Content Include="Views\PlantillaPlanilla\_MsgRegistrarPlantillaPlanillaConcepto.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
