Se agregó validación para evitar eliminar conceptos relacionados con otros.

--- a/src/app/00078-GestionPlanillas/Data/Data.csproj
+++ b/src/app/00078-GestionPlanillas/Data/Data.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Tables\TR_Periodo.cs" />
     <Compile Include="Views\VW_Conceptos.cs" />
     <Compile Include="Views\VW_ConceptosAsignados_Plantilla.cs" />
+    <Compile Include="Views\VW_ConceptosReferencia_Plantilla.cs" />
     <Compile Include="Views\VW_PlantillasPlanilla.cs" />
     <Compile Include="Views\VW_ResumenPlanillaTrabajador.cs" />
     <Compile Include="Views\VW_Administrativo.cs" />
