--- a/src/app/00078-GestionPlanillas/Domain/Domain.csproj
+++ b/src/app/00078-GestionPlanillas/Domain/Domain.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Entities\TrabajadorEntity.cs" />
     <Compile Include="Entities\TrabajadorCategoriaPlanillaDTO.cs" />
     <Compile Include="Entities\VinculoDTO.cs" />
+    <Compile Include="Enums\CategoriaPlanilla.cs" />
     <Compile Include="Enums\Operacion.cs" />
     <Compile Include="Enums\Vinculo.cs" />
     <Compile Include="Helpers\AjaxResponse.cs" />
