--- a/src/app/00078-GestionPlanillas/WebApp/Web.config
+++ b/src/app/00078-GestionPlanillas/WebApp/Web.config
@@ -10,6 +10,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="AppName" value="Aplicativo de Gestion de Planillas" />
+    <add key="DirectorioArchivosExternos" value="F:\" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
