--- a/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
+++ b/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
@@ -164,6 +164,7 @@
     <Compile Include="ServiceFacade\IEstadoServiceFacade.cs" />
     <Compile Include="ServiceFacade\IGrupoOcupacionalServiceFacade.cs" />
     <Compile Include="ServiceFacade\IHorasDocenteServiceFacade.cs" />
+    <Compile Include="ServiceFacade\ILecturaArchivo.cs" />
     <Compile Include="ServiceFacade\Implementations\AdministrativoServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\AfpServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\BancoServiceFacade.cs" />
@@ -175,6 +176,7 @@
     <Compile Include="ServiceFacade\Implementations\EstadoServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\GrupoOcupacionalServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\HorasDocenteServiceFacade.cs" />
+    <Compile Include="ServiceFacade\Implementations\LecturaArchivo.cs" />
     <Compile Include="ServiceFacade\Implementations\NivelRemunerativoServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\PeriodoServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\PlanillaServiceFacade.cs" />
