--- a/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
+++ b/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
@@ -131,7 +131,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ConceptosController.cs" />
-    <Compile Include="Controllers\ConceptosExternosController.cs" />
+    <Compile Include="Controllers\ValoresExternosController.cs" />
     <Compile Include="Controllers\GeneralController.cs" />
     <Compile Include="Controllers\PlanillasController.cs" />
     <Compile Include="Controllers\PlantillaPlanillaConceptoController.cs" />
@@ -458,7 +458,7 @@
     <Content Include="Views\PlantillaPlanillaConcepto\_MantenimientoAsignacionConcepto.cshtml" />
     <Content Include="Views\PlantillaPlanillaConcepto\_MsgRegistrarPlantillaPlanillaConcepto.cshtml" />
     <Content Include="Views\PlantillaPlanillaConcepto\_ConceptosAsignados.cshtml" />
-    <Content Include="Views\ConceptosExternos\Index.cshtml" />
+    <Content Include="Views\ValoresExternos\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
