--- a/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
+++ b/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
@@ -156,6 +156,8 @@
     <Compile Include="Models\UsersModel.cs" />
     <Compile Include="Models\ValorExternoConceptoModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceFacade\Implementations\ValorExternoConceptoServiceFacade.cs" />
+    <Compile Include="ServiceFacade\IValorExternoConceptoServiceFacade.cs" />
     <Compile Include="ServiceFacade\IAdministrativoServiceFacade.cs" />
     <Compile Include="ServiceFacade\IAfpServiceFacade.cs" />
     <Compile Include="ServiceFacade\IBancoServiceFacade.cs" />
