Mejora de interfaz de generación de planillas. Mejora en la asignación de conceptos.

--- a/src/app/00078-GestionPlanillas/Domain/Domain.csproj
+++ b/src/app/00078-GestionPlanillas/Domain/Domain.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Entities\TrabajadorCategoriaPlanillaDTO.cs" />
     <Compile Include="Entities\VinculoDTO.cs" />
     <Compile Include="Enums\CategoriaPlanilla.cs" />
+    <Compile Include="Enums\Estado.cs" />
     <Compile Include="Enums\Operacion.cs" />
     <Compile Include="Enums\Vinculo.cs" />
     <Compile Include="Helpers\AjaxResponse.cs" />
