Avance gestión de usuarios.

--- a/src/app/00078-GestionPlanillas/Data/Data.csproj
+++ b/src/app/00078-GestionPlanillas/Data/Data.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Views\VW_Docentes.cs" />
     <Compile Include="Views\VW_TrabajadoresCategoriaPlanilla.cs" />
     <Compile Include="Views\VW_Trabajadores.cs" />
+    <Compile Include="Views\VW_Usuarios.cs" />
     <Compile Include="Views\VW_ValoresExternos.cs" />
   </ItemGroup>
   <ItemGroup>
