--- a/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
+++ b/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
@@ -128,6 +128,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ConceptosController.cs" />
+    <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Controllers\ValoresExternosController.cs" />
     <Compile Include="Controllers\GeneralController.cs" />
     <Compile Include="Controllers\PlanillasController.cs" />
@@ -151,9 +152,12 @@
     <Compile Include="Models\TrabajadorCategoriaPlanillaModel.cs" />
     <Compile Include="Models\TrabajadorModel.cs" />
     <Compile Include="Models\UsersModel.cs" />
+    <Compile Include="Models\UsuarioModel.cs" />
     <Compile Include="Models\ValorExternoConceptoModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceFacade\Implementations\UsuarioServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\ValorExternoConceptoServiceFacade.cs" />
+    <Compile Include="ServiceFacade\IUsuarioServiceFacade.cs" />
     <Compile Include="ServiceFacade\IValorExternoConceptoServiceFacade.cs" />
     <Compile Include="ServiceFacade\IAdministrativoServiceFacade.cs" />
     <Compile Include="ServiceFacade\IAfpServiceFacade.cs" />
@@ -432,8 +436,6 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\_Sidebar.cshtml" />
-    <Content Include="Views\Shared\_GridPager.cshtml" />
-    <Content Include="Views\Shared\_Grid.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Trabajadores\Index.cshtml" />
     <Content Include="Views\Planillas\Index.cshtml" />
@@ -452,6 +454,8 @@
     <Content Include="Views\ValoresExternos\Mantenimiento.cshtml" />
     <Content Include="Views\ValoresExternos\_MantenimientoValorExterno.cshtml" />
     <Content Include="Views\ValoresExternos\_MsgActualizarValorExternoConcepto.cshtml" />
+    <Content Include="Views\Users\Index.cshtml" />
+    <Content Include="Views\Users\_MantenimientoUsuario.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
