--- a/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
+++ b/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
@@ -155,8 +155,10 @@
     <Compile Include="Models\UsuarioModel.cs" />
     <Compile Include="Models\ValorExternoConceptoModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceFacade\Implementations\RolServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\UsuarioServiceFacade.cs" />
     <Compile Include="ServiceFacade\Implementations\ValorExternoConceptoServiceFacade.cs" />
+    <Compile Include="ServiceFacade\IRolServiceFacade.cs" />
     <Compile Include="ServiceFacade\IUsuarioServiceFacade.cs" />
     <Compile Include="ServiceFacade\IValorExternoConceptoServiceFacade.cs" />
     <Compile Include="ServiceFacade\IAdministrativoServiceFacade.cs" />
