--- a/src/app/00078-GestionPlanillas/Domain/packages.config
+++ b/src/app/00078-GestionPlanillas/Domain/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ExcelDataReader" version="3.6.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages.Data" version="3.2.7" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages.WebData" version="3.2.7" targetFramework="net45" />
 </packages>
