--- a/src/app/00078-GestionPlanillas/Data/Data.csproj
+++ b/src/app/00078-GestionPlanillas/Data/Data.csproj
@@ -48,8 +48,11 @@
     <Compile Include="Connection\Database.cs" />
     <Compile Include="Connection\Result.cs" />
     <Compile Include="Procedures\USP_IU_GrabarValorExterno.cs" />
+    <Compile Include="Procedures\USP_U_ActualizarDatosUsuario.cs" />
+    <Compile Include="Procedures\USP_I_RegistrarDatosUsuario.cs" />
     <Compile Include="Procedures\USP_I_RegistrarPlantillaPlanillaConcepto.cs" />
     <Compile Include="Procedures\USP_I_RegistrarPlantillaPlanilla.cs" />
+    <Compile Include="Procedures\USP_U_ActualizarEstadoUsuario.cs" />
     <Compile Include="Procedures\USP_U_ActualizarPlantillaPlanillaConcepto.cs" />
     <Compile Include="Procedures\USP_U_ActualizarPlantillaPlanilla.cs" />
     <Compile Include="Procedures\USP_U_ActualizarConcepto.cs" />
