--- a/src/app/00078-GestionPlanillas/Domain/packages.config
+++ b/src/app/00078-GestionPlanillas/Domain/packages.config
@@ -3,4 +3,5 @@
   <package id="ExcelDataReader" version="3.6.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.Data" version="3.2.7" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.WebData" version="3.2.7" targetFramework="net45" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
 </packages>
