Avance mantenimiento de periodos

--- a/src/app/00078-GestionPlanillas/Data/Data.csproj
+++ b/src/app/00078-GestionPlanillas/Data/Data.csproj
@@ -48,6 +48,8 @@
     <Compile Include="Connection\Database.cs" />
     <Compile Include="Connection\Result.cs" />
     <Compile Include="Procedures\USP_IU_GrabarValorExterno.cs" />
+    <Compile Include="Procedures\USP_U_ActualizarPeriodo.cs" />
+    <Compile Include="Procedures\USP_I_RegistrarPeriodo.cs" />
     <Compile Include="Procedures\USP_U_ActualizarDatosUsuario.cs" />
     <Compile Include="Procedures\USP_I_RegistrarDatosUsuario.cs" />
     <Compile Include="Procedures\USP_I_RegistrarPlantillaPlanillaConcepto.cs" />
