--- a/src/app/00078-GestionPlanillas/Domain/Domain.csproj
+++ b/src/app/00078-GestionPlanillas/Domain/Domain.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Entities\ConceptoEntity.cs" />
     <Compile Include="Entities\ConceptoAsignadoPlantillaDTO.cs" />
     <Compile Include="Entities\PeriodoDTO.cs" />
+    <Compile Include="Entities\PeriodoEntity.cs" />
     <Compile Include="Entities\ProveedorDTO.cs" />
     <Compile Include="Entities\RolDTO.cs" />
     <Compile Include="Entities\UsuarioDTO.cs" />
