--- a/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
+++ b/src/app/00078-GestionPlanillas/WebApp/WebApp.csproj
@@ -464,12 +464,14 @@
     <Content Include="Views\Account\_ChangePassword.cshtml" />
     <Content Include="Views\Shared\_MsgPartial.cshtml" />
     <Content Include="Views\Users\_ResetPassword.cshtml" />
+    <Content Include="Views\Periodos\Index.cshtml" />
+    <Content Include="Views\Periodos\_MantenimientoPeriodo.cshtml" />
+    <Content Include="Views\Periodos\_MsgRegistrarPeriodo.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Views\Default\" />
     <Folder Include="Views\General\" />
-    <Folder Include="Views\Periodos\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
