--- a/src/app/00078-GestionPlanillas/Domain/packages.config
+++ b/src/app/00078-GestionPlanillas/Domain/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ClosedXML" version="0.96.0" targetFramework="net45" />
+  <package id="DocumentFormat.OpenXml" version="2.16.0" targetFramework="net45" />
   <package id="ExcelDataReader" version="3.6.0" targetFramework="net45" />
+  <package id="ExcelNumberFormat" version="1.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.Data" version="3.2.7" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.WebData" version="3.2.7" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
